erDiagram
    %% GPU 모델 마스터 테이블
    GPU_MODELS {
        varchar2_20 model_id PK "GPU 모델 ID (예: H100_80GB)"
        varchar2_50 model_name "모델명 (예: H100 PCIe 80GB)"
        varchar2_20 manufacturer "제조사 (NVIDIA)"
        varchar2_30 architecture "아키텍처 (Hopper, Ampere 등)"
        number_3 memory_gb "메모리 용량 (GB)"
        number_6 cuda_cores "CUDA 코어 수"
        number_4 tensor_cores "Tensor 코어 수"
        number_4 rt_cores "RT 코어 수"
        number_5 base_clock_mhz "기본 클럭 (MHz)"
        number_5 boost_clock_mhz "부스트 클럭 (MHz)"
        number_6_1 memory_bandwidth_gbps "메모리 대역폭 (GB/s)"
        varchar2_20 memory_type "메모리 타입 (HBM3, GDDR6X)"
        number_4 power_consumption_w "전력 소모 (W)"
        varchar2_10 pcie_generation "PCIe 세대"
        char_1 mig_support "MIG 지원 여부 (Y/N)"
        number_2 max_mig_instances "최대 MIG 인스턴스 수"
        varchar2_10 compute_capability "컴퓨트 능력 (9.0, 8.0 등)"
        number_4 release_year "출시년도"
        varchar2_20 market_segment "시장 분야 (Datacenter, Gaming)"
        date end_of_life_date "단종 예정일"
        date created_date "생성일"
        date updated_date "수정일"
    }

    %% Kubernetes 노드 정보
    GPU_NODES {
        varchar2_50 node_id PK "노드 ID"
        varchar2_100 node_name "노드명"
        varchar2_50 cluster_name "클러스터명"
        varchar2_15 node_ip "노드 IP"
        number_3 total_gpus "총 GPU 개수"
        number_3 available_gpus "사용 가능 GPU 개수"
        varchar2_20 node_status "노드 상태 (ACTIVE, MAINTENANCE)"
        varchar2_20 kubernetes_version "K8s 버전"
        varchar2_20 docker_version "Docker 버전"
        varchar2_20 nvidia_driver_version "NVIDIA 드라이버 버전"
        clob node_labels "노드 라벨 (JSON)"
        clob taints "테인트 정보 (JSON)"
        date created_date "생성일"
        date updated_date "수정일"
    }

    %% GPU 물리 장비
    GPU_DEVICES {
        varchar2_50 device_id PK "장비 ID"
        varchar2_50 node_id FK "소속 노드 ID"
        varchar2_20 model_id FK "GPU 모델 ID"
        number_2 device_index "노드 내 GPU 인덱스"
        varchar2_50 serial_number "시리얼 번호"
        varchar2_20 pci_address "PCI 주소"
        varchar2_100 gpu_uuid "GPU UUID (고유 식별자)"
        varchar2_20 device_status "장비 상태"
        number_5_2 current_temp_c "현재 온도 (°C)"
        number_5_2 max_temp_c "최대 허용 온도"
        number_6_2 current_power_w "현재 전력 소모 (W)"
        number_6_2 max_power_w "최대 전력 소모"
        varchar2_20 driver_version "드라이버 버전"
        varchar2_20 firmware_version "펌웨어 버전"
        varchar2_20 vbios_version "VBIOS 버전"
        date installation_date "설치일"
        date last_maintenance_date "최종 점검일"
        date warranty_expiry_date "보증 만료일"
        number_10_2 purchase_cost "구매 비용 ($)"
        number_3 depreciation_months "감가상각 개월"
        date created_date "생성일"
        date updated_date "수정일"
    }

    %% MIG 프로필 정보
    MIG_PROFILES {
        varchar2_20 profile_id PK "프로필 ID"
        varchar2_20 model_id FK "지원 GPU 모델"
        varchar2_50 profile_name "프로필명 (1g.10gb, 7g.80gb)"
        number_2 compute_slices "컴퓨트 슬라이스 수"
        number_2 memory_slices "메모리 슬라이스 수"
        number_3 memory_gb "할당 메모리 (GB)"
        number_2 max_instances_per_gpu "GPU당 최대 인스턴스 수"
        number_4_2 performance_ratio "성능 비율 (전체 GPU 대비)"
        varchar2_100 use_case "사용 사례"
        varchar2_200 description "설명"
        date created_date "생성일"
    }

    %% MIG 인스턴스
    MIG_INSTANCES {
        varchar2_50 mig_id PK "MIG 인스턴스 ID"
        varchar2_50 device_id FK "소속 GPU 장비 ID"
        varchar2_20 profile_id FK "MIG 프로필 ID"
        number_2 instance_id "GPU 내 인스턴스 ID"
        varchar2_100 mig_uuid "MIG UUID"
        char_1 allocated "할당 여부 (Y/N)"
        varchar2_20 instance_status "인스턴스 상태"
        date created_date "생성일"
        date allocated_date "할당일"
        date last_used_date "마지막 사용일"
    }

    %% GPU 할당 정보
    GPU_ALLOCATIONS {
        varchar2_50 allocation_id PK "할당 ID"
        varchar2_50 namespace "K8s 네임스페이스"
        varchar2_100 pod_name "Pod 이름"
        varchar2_100 container_name "컨테이너 이름"
        varchar2_30 workload_type "워크로드 타입"
        varchar2_20 resource_type "리소스 타입"
        varchar2_50 allocated_resource "할당된 리소스 ID"
        number_3 requested_memory_gb "요청 메모리 (GB)"
        number_3 allocated_memory_gb "할당 메모리 (GB)"
        varchar2_20 priority_class "우선순위 클래스"
        date allocation_time "할당 시간"
        date planned_release_time "계획된 해제 시간"
        date release_time "실제 해제 시간"
        varchar2_20 status "할당 상태"
        number_8_4 cost_per_hour "시간당 비용 ($)"
        number_10_2 total_cost "총 비용 ($)"
        varchar2_50 user_id "사용자 ID"
        varchar2_50 team_id "팀 ID"
        varchar2_50 project_id "프로젝트 ID"
        date created_date "생성일"
        date updated_date "수정일"
    }

    %% GPU 사용량 메트릭
    GPU_USAGE_METRICS {
        number metric_id PK "메트릭 ID (자동증가)"
        varchar2_50 device_id FK "GPU 장비 ID"
        varchar2_50 mig_id FK "MIG 인스턴스 ID"
        varchar2_50 allocation_id FK "할당 ID"
        date timestamp "수집 시간"
        number_5_2 gpu_utilization_pct "GPU 사용률 (%)"
        number_8 memory_used_mb "사용 메모리 (MB)"
        number_8 memory_total_mb "총 메모리 (MB)"
        number_5_2 memory_utilization_pct "메모리 사용률 (%)"
        number_5_2 temperature_c "온도 (°C)"
        number_6_2 power_draw_w "전력 소모 (W)"
        number_5_2 fan_speed_pct "팬 속도 (%)"
        number_5 clock_graphics_mhz "그래픽 클럭 (MHz)"
        number_5 clock_memory_mhz "메모리 클럭 (MHz)"
        number_8_2 pcie_tx_mbps "PCIe 송신 (Mbps)"
        number_8_2 pcie_rx_mbps "PCIe 수신 (Mbps)"
        number_3 processes_count "실행 프로세스 수"
        varchar2_20 collection_source "수집 소스"
        date created_at "레코드 생성일"
    }

    %% GPU 호환성 매트릭스
    GPU_COMPATIBILITY {
        varchar2_50 compat_id PK "호환성 ID"
        varchar2_20 model_id FK "GPU 모델 ID"
        varchar2_10 cuda_version "CUDA 버전"
        varchar2_20 driver_min_version "최소 드라이버 버전"
        varchar2_20 driver_max_version "최대 드라이버 버전"
        varchar2_20 kubernetes_version "K8s 버전"
        varchar2_20 container_runtime "컨테이너 런타임"
        varchar2_20 os_type "운영체제"
        varchar2_50 os_version "OS 버전"
        char_1 supported "지원 여부 (Y/N)"
        number_5_2 performance_impact_pct "성능 영향 (%)"
        clob known_issues "알려진 이슈"
        clob workarounds "해결 방법"
        date tested_date "테스트 일자"
        varchar2_500 notes "비고"
        date created_date "생성일"
    }

    %% GPU 벤치마크 결과
    GPU_BENCHMARKS {
        varchar2_50 benchmark_id PK "벤치마크 ID"
        varchar2_20 model_id FK "GPU 모델 ID"
        varchar2_30 benchmark_type "벤치마크 타입"
        varchar2_50 benchmark_name "벤치마크명"
        number_12_2 score "점수"
        varchar2_20 score_unit "점수 단위"
        number_4 batch_size "배치 크기"
        varchar2_10 precision "정밀도"
        varchar2_20 framework "프레임워크"
        number_6_2 test_duration_minutes "테스트 시간 (분)"
        date test_date "테스트 일자"
        varchar2_200 test_environment "테스트 환경"
        clob hardware_config "하드웨어 구성 (JSON)"
        clob software_config "소프트웨어 구성 (JSON)"
        varchar2_500 notes "비고"
        date created_date "생성일"
    }

    %% 워크로드 프로필
    WORKLOAD_PROFILES {
        varchar2_50 profile_id PK "프로필 ID"
        varchar2_100 workload_name "워크로드명"
        varchar2_30 workload_type "워크로드 타입"
        number_3 min_memory_gb "최소 메모리 (GB)"
        number_3 preferred_memory_gb "권장 메모리 (GB)"
        varchar2_10 min_compute_capability "최소 컴퓨트 능력"
        varchar2_200 preferred_architectures "권장 아키텍처"
        char_1 requires_mig "MIG 필요 여부"
        number_2 max_sharing_ratio "최대 공유 비율"
        clob performance_requirements "성능 요구사항 (JSON)"
        clob resource_constraints "리소스 제약사항 (JSON)"
        varchar2_10 cost_sensitivity "비용 민감도"
        clob sla_requirements "SLA 요구사항 (JSON)"
        varchar2_500 description "설명"
        varchar2_50 created_by "생성자"
        date created_date "생성일"
        date updated_date "수정일"
    }

    %% 알람 규칙
    ALERT_RULES {
        varchar2_50 rule_id PK "규칙 ID"
        varchar2_100 rule_name "규칙명"
        varchar2_30 rule_type "규칙 타입"
        varchar2_20 target_type "대상 타입"
        varchar2_200 target_filter "대상 필터 (JSON)"
        number_10_2 threshold_value "임계값"
        varchar2_10 threshold_operator "비교 연산자"
        varchar2_10 severity "심각도"
        number_4 evaluation_interval_minutes "평가 주기 (분)"
        varchar2_200 notification_channels "알림 채널"
        char_1 enabled "활성화 여부"
        date created_date "생성일"
        date updated_date "수정일"
    }

    %% 시스템 알람
    SYSTEM_ALERTS {
        varchar2_50 alert_id PK "알람 ID"
        varchar2_50 rule_id FK "규칙 ID"
        varchar2_30 alert_type "알람 타입"
        varchar2_10 severity "심각도"
        varchar2_20 target_type "대상 타입"
        varchar2_50 target_id "대상 ID"
        varchar2_500 message "알람 메시지"
        clob details "상세 정보"
        number_10_2 metric_value "메트릭 값"
        number_10_2 threshold_value "임계값"
        varchar2_20 status "알람 상태"
        date created_date "생성일"
        date acknowledged_date "확인일"
        varchar2_50 acknowledged_by "확인자"
        date resolved_date "해결일"
        varchar2_50 resolved_by "해결자"
    }

    %% 관계 정의
    GPU_MODELS ||--o{ GPU_DEVICES : "has"
    GPU_MODELS ||--o{ MIG_PROFILES : "supports"
    GPU_MODELS ||--o{ GPU_COMPATIBILITY : "requires"
    GPU_MODELS ||--o{ GPU_BENCHMARKS : "tested_on"
    
    GPU_NODES ||--o{ GPU_DEVICES : "contains"
    
    GPU_DEVICES ||--o{ MIG_INSTANCES : "partitions_into"
    GPU_DEVICES ||--o{ GPU_USAGE_METRICS : "monitored_by"
    
    MIG_PROFILES ||--o{ MIG_INSTANCES : "creates"
    
    MIG_INSTANCES ||--o{ GPU_USAGE_METRICS : "tracked_by"
    MIG_INSTANCES ||--o{ GPU_ALLOCATIONS : "allocated_as"
    
    GPU_DEVICES ||--o{ GPU_ALLOCATIONS : "allocated_as"
    GPU_ALLOCATIONS ||--o{ GPU_USAGE_METRICS : "generates"
    
    ALERT_RULES ||--o{ SYSTEM_ALERTS : "triggers"
    
    %% 인덱스 및 제약조건 정보
    GPU_DEVICES }|..|| "UNIQUE(node_id, device_index)" : "노드별 GPU 인덱스 유일성"
    GPU_DEVICES }|..|| "UNIQUE(gpu_uuid)" : "GPU UUID 유일성"
    MIG_INSTANCES }|..|| "UNIQUE(device_id, instance_id)" : "장비별 MIG ID 유일성"
    MIG_INSTANCES }|..|| "UNIQUE(mig_uuid)" : "MIG UUID 유일성"
    MIG_PROFILES }|..|| "UNIQUE(model_id, profile_name)" : "모델별 프로필명 유일성"
    
    %% 데이터 분할 정보
    GPU_USAGE_METRICS }|..|| "PARTITION BY timestamp" : "월별 파티션"
    SYSTEM_ALERTS }|..|| "PARTITION BY created_date" : "월별 파티션"
    
    %% 보안 및 감사
    GPU_ALLOCATIONS }|..|| "Audit Trail" : "할당 이력 추적"
    GPU_DEVICES }|..|| "Asset Management" : "자산 관리"
    SYSTEM_ALERTS }|..|| "Security Monitoring" : "보안 모니터링"